Fix production deployment - use serve for static files

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,14 @@
 # Force Nixpacks to use Node.js provider
 providers = ["node"]
 
+[phases.setup]
+nixpkgs = ["...", "python3"]
+
+[phases.install]
+cmds = ["npm install", "npm install -g serve"]
+
 [phases.build]
-cmds = ["npm install", "npm run build"]
+cmds = ["npm run build"]
 
 [start]
-cmd = "npm run start"
+cmd = "serve -s dist -l 8000"
